--- a/src/main/resources/templates/activation/activation-error.html
+++ b/src/main/resources/templates/activation/activation-error.html
@@ -7,11 +7,21 @@
 <body>
 <main layout:fragment="content">
     <div class="main-page-container">
+        <br/>
+        <br/>
+        <i class="fa-regular fa-face-frown fa-5x"></i>
+        <br/>
+        <br/>
         <p>Weryfikacja nieudana...</p>
+        <br/>
+        <br/>
         <p>Link aktwacyjny jest nieprawidłowy.</p>
         <p>Spróbuj jeszcze raz użyć przesłanego linku, a w przypadku niepowodzenia powtórz cały proces ponownie.</p>
-
-        <a th:href="@{/}" href="/">STRONA GŁÓWNA</a>
+        <br/>
+        <br/>
+        <a th:href="@{/}" href="/">>> STRONA GŁÓWNA <<</a>
+        <br/>
+        <br/>
     </div>
 </main>
 </body>
