--- a/src/main/resources/templates/activation/login.html
+++ b/src/main/resources/templates/activation/login.html
@@ -15,7 +15,7 @@
             </label>
             <label class="form-label">
                 Hasło
-                <input type="password" class="form-control" name="password" placeholder="tajneHasło12345#">
+                <input type="password" class="form-control" name="password" placeholder="hasło">
             </label>
             <button class="buttons" type="submit">ZALOGUJ</button>
         </form>
