--- a/src/main/resources/templates/activation/not-activated.html
+++ b/src/main/resources/templates/activation/not-activated.html
@@ -7,12 +7,20 @@
 <body>
 <main layout:fragment="content">
     <div class="main-page-container">
-        <p>Link nie został jeszcze aktywowany.</p>
-        <p>Przejdź do swojej skrzynki e-mail i spróbuj użyć przesłanego linku,
+        <br/>
+        <br/>
+        <p>Link <u>nie został</u> jeszcze aktywowany.</p>
+        <br/>
+        <br/>
+        <i class="fa-regular fa-envelope fa-4x"></i>
+        <p>Przejdź do swojej skrzynki <b>e-mail</b> i spróbuj użyć przesłanego linku,
             a w przypadku niepowodzenia powtórz cały proces ponownie.</p>
-
+        <br/>
+        <br/>
         <p>Możesz zamknąć tą stronę albo przejść na stronę główną:</p>
-        <a th:href="@{/}" href="/">STRONA GŁÓWNA</a>
+        <a th:href="@{/}" href="/">>> STRONA GŁÓWNA <<</a>
+        <br/>
+        <br/>
     </div>
 </main>
 </body>
