--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,15 +7,25 @@
 <body>
 <main layout:fragment="content">
     <div class="main-page-container">
+        <br/>
+        <br/>
+        <i class="fa-solid fa-bug fa-6x"></i>
+        <br/>
+        <br/>
         <div>
             <p>Wystąpił błąd :-(</p>
         </div>
+        <br/>
+        <br/>
         <div>
             <p>Wróć na stronę główną:</p>
         </div>
         <div>
-            <a href="/">STRONA GŁÓWNA</a>
+            <a th:href="@{/}" href="/">>> STRONA GŁÓWNA <<</a>
         </div>
+        <br/>
+        <br/>
+
     </div>
 </main>
 </body>
