--- a/src/main/resources/templates/necrology/all-necrologies.html
+++ b/src/main/resources/templates/necrology/all-necrologies.html
@@ -15,6 +15,7 @@
             <p>Po kliknięciu w wybrany nekrolog zostaniesz przeniesiony do jego szczegółów.</p>
         </div>
         <div th:replace="~{fragment::necrology-preview}"></div>
+        <div th:replace="~{fragment::pages-menu}"></div>
     </div>
 </main>
 </body>
