--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -29,7 +29,7 @@
             <a th:href="@{/}" href="/" class="buttons">strona główna</a>
             <a th:href="@{/strona/instrukcja}" href="/strona/instrukcja" class="buttons">instrukcja</a>
             <a th:href="@{/nekrolog/dodaj}" href="/nekrolog/dodaj" class="buttons">dodaj nekrolog</a>
-            <a th:href="@{/wszystkie}" href="/wszystkie" class="buttons">wszystkie nekrologi</a>
+            <a th:href="@{/wszystkie/strona/1}" href="/wszystkie/strona/1" class="buttons">wszystkie nekrologi</a>
         </div>
         <div><a th:href="@{/administruj}" href="/administruj">ADMIN</a></div>
     </div>
@@ -79,6 +79,33 @@
                 </div>
             </a>
         </div>
+    </div>
+</div>
+<div th:fragment="pages-menu">
+    <div th:if="${necrologies.totalPages > 1}" class="pages-menu">
+        <div>
+            <a th:if="${currentPage > 1}" th:href="@{/wszystkie/strona/1}">Pierwsza</a>
+            <span th:unless="${currentPage > 1}">Pierwsza</span>
+        </div>
+        <div>
+            <a th:if="${currentPage > 1}" th:href="@{|/wszystkie/strona/${currentPage - 1}|}"><i class="fa-solid fa-angle-left"></i></a>
+            <span th:unless="${currentPage > 1}"><i class="fa-solid fa-angle-left"></i></span>
+        </div>
+        <div class="current-page" th:each="page : ${#numbers.sequence(1, necrologies.totalPages)}">
+            <span th:unless="${currentPage != page}" th:text="${page}"></span>
+            <a th:if="${currentPage != page}" th:href="@{|/wszystkie/strona/${page}|}" th:text="${page}"></a>
+        </div>
+        <div>
+            <a th:if="${currentPage < necrologies.totalPages}" th:href="@{|/wszystkie/strona/${currentPage + 1}|}"><i class="fa-solid fa-angle-right"></i></a>
+            <span th:unless="${currentPage < necrologies.totalPages}"><i class="fa-solid fa-angle-right"></i></span>
+        </div>
+        <div>
+            <a th:if="${currentPage < necrologies.totalPages}" th:href="@{|/wszystkie/strona/${necrologies.totalPages}|}">Ostatnia</a>
+            <span th:unless="${currentPage < necrologies.totalPages}">Ostatnia</span>
+        </div>
+    </div>
+    <div class="pages-menu" th:unless="${necrologies.totalPages > 1}">
+        <span class="current-page" th:text="${currentPage}"></span>
     </div>
 </div>
 <footer th:fragment="footer">
