Changed admin button, fixed script function countAge()

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -30,8 +30,8 @@
             <a th:href="@{/strona/instrukcja}" href="/strona/instrukcja" class="buttons">instrukcja</a>
             <a th:href="@{/nekrolog/dodaj}" href="/nekrolog/dodaj" class="buttons">dodaj nekrolog</a>
             <a th:href="@{/wszystkie/strona/1}" href="/wszystkie/strona/1" class="buttons">wszystkie nekrologi</a>
+            <a th:href="@{/administruj}" href="/administruj" class="buttons">.:ADMIN:.</a>
         </div>
-        <div><a th:href="@{/administruj}" href="/administruj">ADMIN</a></div>
     </div>
 </header>
 <div th:fragment="necrology-preview">
