--- a/src/main/resources/static/styles/default.css
+++ b/src/main/resources/static/styles/default.css
@@ -95,6 +95,14 @@
     padding: 5px;
 }
 
+.admin-buttons {
+    border: solid darkcyan medium;
+    min-width: min-content;
+    color: darkcyan;
+    border-radius: 10px;
+    padding: 5px;
+}
+
 .section-title {
     display: flex;
     flex-direction: column;
@@ -111,6 +119,8 @@
     align-items: center;
     justify-content: center;
     font-size: large;
+    margin-top: 50px;
+    margin-bottom: 50px;
     width: 100%;
     row-gap: 25px;
 }
@@ -325,6 +335,14 @@ form {
 }
 
 /* SINGLE-NECROLOGY STYLES */
+.single-necrology-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    overflow-x: scroll;
+}
 
 .single-necrology {
     display: flex;
@@ -605,4 +623,27 @@ form {
     width: 100%;
     row-gap: 20px;
     margin-bottom: 50px;
+}
+
+/* INSTRUCTION */
+
+ol {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 30px;
+}
+
+ol > li {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 90%;
+    row-gap: 20px;
+}
+
+.instruction-img {
+    max-width: 40%;
 }
