--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
                         <li>zapal wirtualną świeczkę</li>
                     </ul>
                     <p>Nie wiesz jak zacząć?</p>
-                    <p>Zapoznaj się z krótką <a th:href="@{/instrukcja}" href="/instrukcja" class="index-instruction">INSTRUKCJĄ</a>
+                    <p>Zapoznaj się z krótką <a th:href="@{/strona/instrukcja}" href="/strona/instrukcja" class="index-instruction">INSTRUKCJĄ</a>
                         dodawania nekrologów.
                     </p>
                 </div>
